# routes/api.php
@@ -69,6 +69,7 @@ Route::prefix('product')->group(function () {
 Route::prefix('cart')->middleware('auth:sanctum')->group(function () {
     Route::get('/', [CartController::class, 'index'])->name('cart.index');
     Route::get('/{id_user}', [CartController::class, 'show'])->name('cart.show');
+    Route::get('/{id_user}/history', [CartController::class, 'showByUser'])->name('cart.show.user');
     Route::post('/{id_user}/product/{id_product}', [CartController::class, 'add_item_to_cart'])->name('cart.add_item');
     Route::put('/{id_user}/product/{id_product}', [CartController::class, 'update'])->name('cart.update_item');
     Route::delete('/{id_user}/product/{id_product}', [CartController::class, 'destroy'])->name('cart.remove_item');
